<resources>
    <string name="app_name">DesafioAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_marvel">Welcome to the Marvel HQ\'s</string>
    <string name="page">Page:</string>
    <string name="price">Price</string>
    <string name="published">Published:</string>
    <string name="save">SAVE</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
</resources>