<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment"
    android:background="@color/colorOnPrimary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dim_24_dp"
            android:layout_marginTop="@dimen/dim_140_dp"
            android:layout_marginEnd="@dimen/dim_24_dp"
            android:layout_marginBottom="@dimen/dim_120_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="@dimen/dim_10_dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_10_pt"
                android:layout_marginTop="@dimen/dim_10_dp"
                android:layout_marginStart="@dimen/dim_10_dp"
                android:textColor="@color/white"
                android:text="@string/welcome_to_the_marvel">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLoginBotton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dim_60_dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/dim_10_dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dim_8_dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_20_dp"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLoginLogin"
                    android:layout_marginTop="@dimen/dim_28_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/dim_10_dp"
                    android:text="@string/log_in"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegisterLogin"
                    android:layout_marginTop="@dimen/dim_30_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="@dimen/dim_10_dp"
                    android:textColor="@color/colorBtn"
                    android:text="@string/create_account"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>